# myaku

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/resources/: chart.ts  config.toml  script.ts
.github/resources/charts/: total-loc-over-time.ts  total-todos-over-time.ts
.github/workflows/: check.yml  overview.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  util.rs
cli/src/output/: json.rs  mod.rs  parquet.rs
example/: myaku.config.js  myaku.config.json  myaku.config.toml
github/overview/: script.ts
lib/: Cargo.toml
lib/src/: cache.rs  config.rs  git.rs  graph.rs  lib.rs  output.rs
lib/src/collectors/: changed_files.rs  changed_files_loc.rs  file_list.rs  gritql_pattern_occurences.rs  loc.rs  mod.rs  pattern_occurences.rs  total_cargo_dependencies.rs  total_diff_stat.rs  total_file_count.rs  total_loc.rs  total_pattern_occurences.rs  utils.rs
lib/src/output/: json.rs  mod.rs  parquet.rs
src/: cache.rs  collectors.rs  config.rs  git.rs  graph.rs  main.rs  output.rs  util.rs
src/collectors/: changed_files.rs  loc.rs  mod.rs  pattern_occurences.rs  total_cargo_dependencies.rs  total_diff_stat.rs  total_loc.rs  total_pattern_occurences.rs  utils.rs
