[package]
name = "myaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
auth-git2 = "0.5.3"
clap = { version = "4.4.12", features = ["derive"] }
console = "0.15.8"
env_logger = "0.10.1"
git2 = "0.18.1"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokei = "12.1.2"
toml = "0.8.8"
