[package]
name = "myaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
cargo-lock = "9.0.0"
clap = { version = "4.4.12", features = ["derive"] }
console = "0.15.8"
dashmap = "5.5.3"
env_logger = "0.10.1"
execute = "0.2.13"
git2 = "0.18.1"
grep = "0.3.1"
indexmap = "2.2.6"
indicatif = "0.17.7"
log = "0.4.20"
nanoid = "0.4.0"
num_cpus = "1.16.0"
object-pool = "0.5.4"
petgraph = { version = "0.6.5", features = ["rayon"] }
rayon = { version = "1.10.0", optional = true }
regex = "1.10.2"
rstest = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
sha1 = "0.10.6"
tokei = "12.1.2"
toml = "0.8.8"
walkdir = "2.5.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[profile.profiling]
inherits = "release"
debug = true
