[package]
name = "myaku-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myaku"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.78"
arrow = "52.0.0"
clap = { version = "4.4.12", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
parquet = "52.0.0"
regex = "1.10.2"
rstest = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.11.6", features = ["arrow-52"] }
serde_json = "1.0.111"
thiserror = "2"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.myaku]
path = "../lib"
default-features = false

[features]
default = ["rayon"]
rayon = ["myaku/rayon"]
