[package]
name = "myaku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
arrow = "52.0.0"
cargo-lock = "9.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "5.5.3"
execute = "0.2.13"
git2 = "0.18.1"
grep = "0.3.1"
indexmap = "2.2.6"
nanoid = "0.4.0"
num_cpus = "1.16.0"
object-pool = "0.5.4"
parquet = "52.0.0"
petgraph = { version = "0.6.5", features = ["rayon"] }
rand = "0.8.5"
rayon = { version = "1.10.0", optional = true }
regex = "1.10.2"
rstest = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.11.6", features = ["arrow-52"] }
serde_json = "1.0.111"
sha1 = "0.10.6"
ssh-key = { version = "0.6.6", features = ["serde", "alloc"] }
tokei = "12.1.2"
toml = "0.8.8"
tracing = "0.1.40"
walkdir = "2.5.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
